--- a/package.json
+++ b/package.json
@@ -53,7 +53,9 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "@finsweet/ts-utils": "^0.40.0"
+    "@finsweet/ts-utils": "^0.40.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.3"
   },
   "engines": {
     "pnpm": ">=8"
